# site-calc-investment

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  READY_TO_PUBLISH.md  publish_to_github.bat  publish_to_github.sh  pyproject.toml  verify_ready.py
.github/workflows/: ci.yml  publish.yml
docs/: INVESTMENT_CLIENT_SPEC.md  MCP_SERVER_SPEC.md
examples/: 01_basic_capacity_planning.py  02_scenario_comparison.py  03_financial_analysis.py
site_calc_investment/: __init__.py  exceptions.py
site_calc_investment/analysis/: __init__.py  comparison.py  financial.py
site_calc_investment/api/: __init__.py  client.py
site_calc_investment/mcp/: __init__.py  config.py  data_loaders.py  scenario.py  server.py
site_calc_investment/models/: __init__.py  common.py  devices.py  requests.py  responses.py
site_calc_investment/visualization/: __init__.py  _template.py  aggregation.py  dashboard.py  types.py
site_calc_investment/visualization/charts/: __init__.py  dispatch.py  energy.py  financial.py
tests/: conftest.py  test_api_client.py  test_common_models.py  test_device_models.py  test_financial_analysis.py  test_production.py  test_request_models.py  test_scenario_comparison.py
tests/test_mcp/: conftest.py  test_data_loaders.py  test_integration.py  test_mcp_production.py  test_scenario.py  test_tools.py
tests/test_visualization/: conftest.py  test_aggregation.py  test_charts_dispatch.py  test_charts_energy.py  test_charts_financial.py  test_dashboard.py  test_types.py
