[project]
name = "site-calc-investment"
version = "1.0.0"
description = "Python client for Site-Calc investment planning (capacity sizing, ROI analysis)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Site-Calc Team", email = "info@site-calc.example.com"}
]
keywords = ["energy", "investment", "capacity-planning", "roi", "npv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "python-dateutil>=2.8",
    "numpy>=1.24",  # For financial calculations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas>=2.0",  # For scenario comparison
]

[project.urls]
Homepage = "https://github.com/site-calc/investment-client"
Documentation = "https://docs.site-calc.example.com/investment-client"
Repository = "https://github.com/site-calc/investment-client"
Issues = "https://github.com/site-calc/investment-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["site_calc_investment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=site_calc_investment --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
