[project]
name = "site-calc-investment"
version = "1.2.2"
description = "Python client for Site-Calc investment planning (capacity sizing, ROI analysis)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Site-Calc Team", email = "info@site-calc.example.com"}
]
keywords = ["energy", "investment", "capacity-planning", "roi", "npv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "python-dateutil>=2.8",
    "numpy>=1.24",  # For financial calculations
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.2",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas>=2.0",  # For scenario comparison
    "tzdata>=2024.1",  # Timezone data for Windows
    "fastmcp>=2.0",  # For MCP server tests
]

[project.scripts]
site-calc-investment-mcp = "site_calc_investment.mcp:main"

[project.urls]
Homepage = "https://github.com/stranma/site-calc-investment"
Documentation = "https://github.com/stranma/site-calc-investment#readme"
Repository = "https://github.com/stranma/site-calc-investment"
Issues = "https://github.com/stranma/site-calc-investment/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["site_calc_investment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=site_calc_investment --cov-report=term-missing -m 'not production'"
markers = [
    "production: Tests requiring production API credentials (skip by default)",
    "slow: Long-running tests",
    "integration: Integration tests",
]
timeout = 300

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
